--- a/index.html
+++ b/index.html
@@ -21,11 +21,26 @@
      <p>Os melhores sorvetes da cidade,agora com entrega em casa!</p>
      
         </div>
-        <a href="">Inicío</a>
+        <ul>
+        <li>
+            <a href="">Inicío</a>
+        </li>
+        <li>
         <a href="">Cardapio</a>
+        </li>
+        <li>
         <a href="">Carrinho (3)</a>
+        </li>
+        <li>
         <a href="">Minha Compra</a>
+        </li>
+    </ul>
+  <div class="login-section">
+    <a href="#"class="btn login-btn">Entrar</a>
+    <a href="#" class="btn">cadastrar</a>
+  </div>
     </nav>
+
 
 
 </body>
