--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <header class="cabecalho">
-        <h1> Sorveteria Do Bexiga </h1>
+        <h1> 🎈 Sorveteria Do Bexiga 🎈 </h1>
         <p>Seu sorvete perfeito entregue em casa!</p>
     </header>
 
@@ -41,7 +41,16 @@
   </div>
     </nav>
 
+  <div class="container">
+    <section class="hero">
+        <div class="hero-content">
+            <h2>EXPERIMENTE NOSSOS SABORES EXCLUSIVOS!</h2>
+            <p>Peça online e receba em sua casa ou retire na loja</p>
+            <a href="#menu"class="btn">Ver cardapio</a>
+         </div>
 
+    </section>
+  </div>
 
 </body>
 </html>
