--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+</div><!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -11,46 +11,56 @@
 <body>
     
     <header class="cabecalho">
-        <h1> 🎈 Sorveteria Do Bexiga 🎈 </h1>
+        <h1>👽 Sorveteria do Et 👽</h1>
         <p>Seu sorvete perfeito entregue em casa!</p>
     </header>
 
     <nav class="navegacao">
         <div class="logo">
-     <h1> Análise sorveteria</h1>
-     <p>Os melhores sorvetes da cidade,agora com entrega em casa!</p>
-     
+            <h2>2DS sorveteria</h2>
         </div>
         <ul>
-        <li>
-            <a href="">Inicío</a>
-        </li>
-        <li>
-        <a href="">Cardapio</a>
-        </li>
-        <li>
-        <a href="">Carrinho (3)</a>
-        </li>
-        <li>
-        <a href="">Minha Compra</a>
-        </li>
-    </ul>
-  <div class="login-section">
-    <a href="#"class="btn login-btn">Entrar</a>
-    <a href="#" class="btn">cadastrar</a>
-  </div>
+            <li>
+                <a href="">Início</a>
+            </li>
+            <li>
+                <a href="">Cardápio</a>
+            </li>
+            <li>
+                <a href="">Carrinho (3)</a>
+            </li>
+           <li>
+                <a href="">Minha Conta</a>
+           </li>
+        </ul>
+        <div class="login-section">
+            <a href="#" class="btn login-btn">Entrar</a>
+            <a href="#" class="btn">Cadastrar</a>
+        </div>
     </nav>
 
-  <div class="container">
-    <section class="hero">
-        <div class="hero-content">
-            <h2>EXPERIMENTE NOSSOS SABORES EXCLUSIVOS!</h2>
-            <p>Peça online e receba em sua casa ou retire na loja</p>
-            <a href="#menu"class="btn">Ver cardapio</a>
-         </div>
-
-    </section>
+    <div class="container">
+        <section class="hero">
+            <div class="hero-content">
+                <h2>Experimente nossos sabores exclusivos!</h2>
+                <p>Peça online e receba em sua casa ou retire na loja</p>
+                <a href="#menu" class="btn">Ver cardápio</a>
+            </div>
+        </section>
+ <h2 id="menu">Nossos sabores</h2>
+ <div class="products">
+  <div class="product-cards">
+  <div class="product-image">
+    <img src="https://images.unsplash.com/photo-1576506295286-5cda18df43e7" alt="Sorvete de Chocolate" alt="">
   </div>
-
+  </div>
+ </div>
+ <div class="products">
+  <div class="product-cards">
+  <div class="product-image">
+    <img src="https://images.unsplash.com/photo-1576506295286-5cda18df43e7" alt="Sorvete de Chocolate" alt="">
+  </div>
+  </div>
+ </div>
 </body>
 </html>
